# ICML2021

./: README.md  readme.md
cudaSDFRender/: CMakeLists.txt  readme.txt
cudaSDFRender/neuralGeometries/: car_1.h5  plane_1.h5  plane_2.h5  plane_3.h5
cudaSDFRender/src/: CMakeLists.txt  main.cpp  neuralNetwork.cpp  neuralNetwork.hh  simpleInfer.cpp  volumeRender_kernel.cu
cudaSDFRender/src/common/: lodepng.cpp  lodepng.h
cudaSDFRender/src/common/inc/GL/: glxew.h  glxext.h
cudaSDFRender/src/layers/: denseLayer.cu  denseLayer.hh  layer.hh
cudaSDFRender/src/neuralUtils/: image.cu  image.hh  matrix.cu  matrix.hh  shape.cu  shape.hh
cudaSDFRender/submodules/HighFive/: README.md
cudaSDFRender/submodules/cutlass/: README.md
cudaSDFRender/submodules/cutlass/examples/00_basic_gemm/: basic_gemm.cu
cudaSDFRender/submodules/cutlass/examples/01_cutlass_utilities/: cutlass_utilities.cu
cudaSDFRender/submodules/cutlass/examples/05_batched_gemm/: batched_gemm.cu
cudaSDFRender/submodules/cutlass/examples/06_splitK_gemm/: splitk_gemm.cu
neuralImplicitTools/: readme.md
neuralImplicitTools/src/: geometry.py  iglViewer.py  metrics.py  model.py  modelmesher.py  recordgen.py  schedules.py  sdfsequencer.py  trainer.py
neuralImplicitTools/submodules/libigl/: CMakeLists.txt
neuralImplicitTools/submodules/miniball/: README.rst  setup.py
neuralImplicitTools/submodules/miniball/Miniball.egg-info/: PKG-INFO  SOURCES.txt
neuralImplicitTools/submodules/miniball/miniball/: __init__.py
neuralImplicitTools/submodules/miniball/src/: miniballmodule.cpp
thingi10k-weightEncoded/: 100026_sf.h5  100030_sf.h5  100031_sf.h5  100032_sf.h5  100033_sf.h5  100034_sf.h5  100035_sf.h5  100036_sf.h5  100040_sf.h5  100045_sf.h5  100046_sf.h5  100047_sf.h5  100070_sf.h5  100071_sf.h5  100072_sf.h5  100073_sf.h5  100075_sf.h5  100139_sf.h5  100173_sf.h5  1001930_sf.h5  1001931_sf.h5  100281_sf.h5  100282_sf.h5  100322_sf.h5  100323_sf.h5  100330_sf.h5  100335_sf.h5  100336_sf.h5  100340_sf.h5  100342_sf.h5  100344_sf.h5  100345_sf.h5  100346_sf.h5  100349_sf.h5  100388_sf.h5  1004826_sf.h5  100500_sf.h5  1005266_sf.h5  1005267_sf.h5  1005268_sf.h5  (+8278 more)
(+28 files in other folders)
